# otf2xx

./: .clang-format  .travis.yml  .turtle.json  AUTHORS  CMakeLists.txt  LICENSE  OTF2.cmake  OTF2XX.cmake  README.md  otf2xxConfig.cmake
.github/workflows/: cmake.yml
cmake/: CfgExeSearchModule.cmake  FindClangFormat.cmake  FindOTF2.cmake
include/otf2xx/: attribute_list.hpp  attribute_value.hpp  common.hpp  exception.hpp  fwd.hpp  intrusive_ptr.hpp  otf2.hpp  reference.hpp  reference_generator.hpp  registry.hpp  tmp.hpp
include/otf2xx/chrono/: chrono.hpp  clock.hpp  convert.hpp  duration.hpp  ticks.hpp  time_point.hpp
include/otf2xx/definition/: attribute.hpp  call_path.hpp  call_site.hpp  calling_context.hpp  clock_properties.hpp  comm.hpp  compare.hpp  container.hpp  definitions.hpp  fwd.hpp  group.hpp  interrupt_generator.hpp  io_directory.hpp  io_file.hpp  io_handle.hpp  io_paradigm.hpp  io_pre_created_handle_state.hpp  io_regular_file.hpp  location.hpp  location_group.hpp  mapping_table.hpp  marker.hpp  metric_class.hpp  metric_class_recorder.hpp  metric_instance.hpp  metric_member.hpp  parameter.hpp  pre_fwd.hpp  property.hpp  region.hpp  rma_win.hpp  source_code_location.hpp  string.hpp  system_tree_node.hpp  unknown.hpp
include/otf2xx/definition/detail/: attribute_impl.hpp  base.hpp  base2.hpp  call_path_impl.hpp  call_site_impl.hpp  calling_context_impl.hpp  cart_coordinate_impl.hpp  cart_dimension_impl.hpp  cart_topology_impl.hpp  comm_impl.hpp  group_impl.hpp  impl_base.hpp  interrupt_generator_impl.hpp  io_directory_impl.hpp  io_file_base.hpp  io_file_impl.hpp  io_handle_base.hpp  io_handle_impl.hpp  io_paradigm_impl.hpp  io_pre_created_handle_state_impl.hpp  location_group_impl.hpp  location_impl.hpp  mapping_table_impl.hpp  marker_impl.hpp  metric_base.hpp  metric_class_impl.hpp  metric_class_recorder_impl.hpp  metric_instance_impl.hpp  metric_member_impl.hpp  owning_ptr.hpp  parameter_impl.hpp  property_impl.hpp  ref_counted.hpp  referable_base.hpp  region_impl.hpp  rma_win_impl.hpp  source_code_location_impl.hpp  string_impl.hpp  system_tree_node_domain_impl.hpp  system_tree_node_impl.hpp  (+1 more)
include/otf2xx/detail/: intrusive_ptr.hpp
include/otf2xx/event/: base.hpp  buffer.hpp  buffer_flush.hpp  calling_context_sample.hpp  enter.hpp  events.hpp  fwd.hpp  io_acquire_lock.hpp  io_change_status_flag.hpp  io_create_handle.hpp  io_delete_file.hpp  io_destroy_handle.hpp  io_duplicate_handle.hpp  io_operation_begin.hpp  io_operation_cancelled.hpp  io_operation_complete.hpp  io_operation_issued.hpp  io_operation_test.hpp  io_release_lock.hpp  io_seek.hpp  io_try_lock.hpp  leave.hpp  marker.hpp  measurement.hpp  metric.hpp  mpi_collective_begin.hpp  mpi_collective_end.hpp  mpi_ireceive.hpp  mpi_ireceive_request.hpp  mpi_isend.hpp  mpi_isend_complete.hpp  mpi_receive.hpp  mpi_request_cancelled.hpp  mpi_request_test.hpp  mpi_send.hpp  parameter_int.hpp  parameter_string.hpp  parameter_unsigned_int.hpp  thread_acquire_lock.hpp  thread_begin.hpp  (+12 more)
include/otf2xx/event/detail/: metric_values.hpp  value_proxy.hpp
include/otf2xx/reader/: callback.hpp  callback_funcs.hpp  fwd.hpp  reader.hpp  util.hpp
include/otf2xx/tmp/: algorithm.hpp  runtime.hpp
include/otf2xx/traits/: definition.hpp  event.hpp  reference.hpp  reference_tag.hpp  traits.hpp  tuple_meta.hpp
include/otf2xx/writer/: archive.hpp  fwd.hpp  global.hpp  local.hpp
include/otf2xx/writer/detail/: collective.hpp
src/: CMakeLists.txt
src/reader/callback/: definitions.cpp  events.cpp
templates/: CMakeLists.txt
templates/include/otf2xx/: reference.inc.hpp.tmpl
templates/include/otf2xx/definition/: deffwd.hpp.tmpl  pre_fwd.hpp.tmpl
templates/include/otf2xx/traits/: reference.hpp.tmpl  reference.inc.hpp.tmpl
tests/: CMakeLists.txt  chrono_convert_test.cpp  enums_test.cpp  intrusive_ptr_test.cpp  lookup_registry_test.cpp  metric_events.cpp  reader_test.cpp  ref_gen_test.cpp  registry_test.cpp  testHelpers.hpp  tmp_test.cpp  trace_compare.sh  traits_test.cpp  writer_registry_test.cpp  writer_registry_to_archive_test.cpp  writer_test.cpp
tests/expected_failures/: metric_event_with_instance.cpp
